# convention

./: .alexrc.yml  .codespellrc  .commitlintrc  .commitlintrc.js  .commitlintrc.yml  .editorconfig  .gitattributes  .gitconfig  .gitignore  .markdown-link-check.json  .markdownlint-cli2.yaml  .markdownlint.json  .markdownlintignore  .releaserc.json  .shellcheckrc  404.html  AGENTS.md  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README.md  SUMMARY.md  book.json  book.toml  conftest.toml  hugo.toml  hugo.yml  index.html  lefthook.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  renovate.json  sitemap.xml  skills-lock.json  trivy.yaml
.devcontainer/: README.md  devcontainer.json
.github/: continuous-feedback.yml  continuous-integration.yml  continuous-pages.yml  continuous-security.yml  continuous-testing.yml  dependabot.yml  labeler.yml
about/: README.md  abstraction_layer.md  app-resources.md  architectural-pattern.md  architecture-decision-records.md  architecture-modeling-concepts.md  branching-strategies.md  build-sytems.md  ci-cd.md  code-analysis.md  code-coverage.md  comment.md  continuous-pipelines.md  crlf-vs-lf.md  cross-compiler.md  data-management.md  deployment-strategies.md  devops.md  feature-toggles.md  file-systems.md  git-hooks.md  git-merging-strategies.md  git.md  githooks.md  gitops-vs-devops.md  gitops.md  identity-management.md  licenses.md  logging-monitoring.md  merging-strategies.md  microservices-architecture.md  monorepo-vs-polyrepo.md  owasp.md  package-managers.md  programming-language.md  project-layout.md  (+14 more)
(+469 files in other folders)
